apps/mira/manifests/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: mira
spec:
  selector:
    app: mira-db
  ports:
  - port: 5432
    targetPort: 5432
