apps/mira/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mira
  namespace: mira
spec:
  selector:
    app: mira
  ports:
  - port: 80
    targetPort: 3000
  type: ClusterIP
